# photo-vector-search

./: README.md  examples.txt  pyproject.toml
chroma_db/: chroma.sqlite3
photo_vector_search/: __init__.py  app.py  cli.py  photo_vector_search.py  utils.py
