[tool.poetry]
name = "photo-vector-search"
version = "0.1.0"
description = ""
authors = ["ricklon <rianders@docs.rutgers.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pillow = "^10.4.0"
numpy = "1.24.3"
chromadb = "^0.5.7"
ollama = "^0.3.3"
tqdm = "^4.66.5"
requests = "^2.32.3"
logging = "^0.4.9.6"
torch = "2.2"
torchvision = "^0.17"
clip = {git = "https://github.com/openai/CLIP.git"}
ftfy = "^6.2.3"
regex = "^2024.9.11"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
photo-vector-search = "photo_vector_search.cli:cli"
